# CLikeEcs

./: .gitignore  CMakeLists.txt  README.md
cmake-modules/: FindGLUT.cmake  FindOpenGL.cmake  FindPkgConfig.cmake  FindSDL2.cmake  FindSDL2_image.cmake
include/: DebugNameComponentManager.h  Entity.h  EntityCache.h  EntityManager.h  EntityMatcher.h  Instance.h  InstanceData.h  InstanceSystem.h  JSONHandler.h  JSONLoader.h  Manager.h  Mask.h  MaskMapper.h  Movement.h  Physics2D.h  System.h  SystemManager.h  Transform.h  Vector2.h  Vector3.h
include/components/: Matrix4x4.h  Sprite.h  Texture.h  Transform.h  Vector3.h
include/display/: Screen.h
include/effects/: Shader.h
include/entities/: Entity.h
include/managers/: EntityManager.h  Input.h  InstanceData.h  InstanceSystem.h  Manager.h  SystemManager.h  TransformManager.h
include/rapidjson/: encodings.h
include/scenes/: SceneOpenGL.h
include/scenes/prefabs/: Cube.h
include/systems/: DefaultSystem.h  Physics2D.h  Renderer2D.h  System.h  TransformComponent.h
include/utils/: DebugNameComponentManager.h  Glew.h  JSONHandler.h  MaskMapper.h
includes/: ComponentManager.h  DebugNameComponentManager.h  Entity.h  EntityManager.h  InstanceData.h  Vector3.h
lib/SDL2-2.0.5/share/aclocal/: sdl2.m4
src/: DebugNameComponentManager.cpp  DefaultSystem.cpp  EntityManager.cpp  JSONHandler.cpp  JSONLoader.cpp  Manager.cpp  MaskMapper.cpp  Physics2D.cpp  Renderer2D.cpp  System.cpp  SystemManager.cpp  Vector3.cpp  main.cpp
src/components/: Texture.cpp
src/display/: Screen.cpp
src/effects/: Shader.cpp
src/managers/: Input.cpp  JSONHandler.cpp  Manager.cpp  SystemManager.cpp  TransformManager.cpp
src/scenes/: SceneOpenGL.cpp
src/scenes/prefabs/: Cube.cpp
src/systems/: DefaultSystem.cpp  Physics2D.cpp  System.cpp
src/utils/: Glew.cpp
